syntax = "proto3";

import "google/protobuf/timestamp.proto";


package domfin.sdk;

message Category {
  string id = 1;
  string label = 2;
}

message CategorisationRule {
  Category category = 1;
  repeated string substrings = 2;
}

message SetCategorisationRuleRequest {
  string category_id = 1;
  repeated string substrings = 2;
}

message GetAllCategorisationRulesRequest {}

message GetAllCategorisationRulesResponse {
  repeated CategorisationRule rules = 1;
}

message SetCategorisationRuleResponse {}

message Amount {
  double number = 1;
  string currency = 2;
}

message Expense {
  string account_id = 1;
  string transaction_id = 2;
  string value_date = 3;
  Amount amount = 4;
  string creditorName = 5;
  optional Category category = 6;
}

enum CategorisationFilter {
  ALL = 0;
  SELECTED = 1;
  UNCATEGORISED = 2;
}

message GetCategorisedExpensesRequest {
  repeated string account_ids = 1;
  repeated string category_ids = 2;
  CategorisationFilter categorisation_filter = 3;
  optional Pagination pagination = 4;
}

message CategorisedExpensesResponse {
  repeated Expense expenses = 1;
  optional string next_page_token = 2;
}

message Pagination {
  int32 per_page = 1;
  optional string page_token = 2;
}